--- a/task_manager_cli/Pipfile
+++ b/task_manager_cli/Pipfile
@@ -5,8 +5,9 @@ verify_ssl = true
 
 [packages]
 click = "*"
-sqlalchemy = "*"
 tomli = "*"
+sqlalchemy = "*"
+alembic = "*"
 
 [dev-packages]
 pytest = "*"
